--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,16 +28,48 @@ body {
 	height: 53px;
 }
 
+h1{
+	font-size: 3.75em;
+	text-align: center;
+	color: #707070;
+	margin-top: 139px;
+}
+
 li{
 	font-size: 1.375em;
 	padding-inline: 5%;
-}
-
-.font-OSans-400{
 	font-weight: 400;
 }
 
-.font-OSans-700{
+.font-regular-400{
+	font-weight: 400;
+}
+
+.font-bold-700{
 	font-weight:700;
 }
 
+footer{
+top: 2720px;
+left: 0px;
+width: 320px;
+height: 184px;
+background: #E83E8C 0% 0% no-repeat padding-box;
+opacity: 1;
+}
+
+footer div{
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+
+footer div img{
+top: 2778px;
+left: 147px;
+width: 36px;
+height: 67px;
+/* UI Properties */
+background: #FFFFFF 0% 0% no-repeat padding-box;
+opacity: 1;
+}
