--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,21 @@ body {
 
 .navbar {
 	/* overflow: hidden; */
+	
+}
+
+
+.navbar {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
 	background-color: #e83e8c;
 }
+
 .navbar-nav {
 	margin-left: 70%;
 }
-
 
 #logo-suricata {
 	top: 12px;
@@ -28,6 +37,7 @@ body {
 	height: 53px;
 }
 
+
 h1{
 	font-size: 3.75em;
 	text-align: center;
@@ -35,7 +45,7 @@ h1{
 	margin-top: 139px;
 }
 
-li{
+i{
 	font-size: 1.375em;
 	padding-inline: 5%;
 	font-weight: 400;
@@ -45,17 +55,44 @@ li{
 	font-weight: 400;
 }
 
-.font-bold-700{
+.font-bold-700, .payment-card-section, .card-title{
 	font-weight:700;
 }
 
+
+.card img{
+	width: 248px;
+	height: 132px;
+}
+
+.card-body{
+	width: 248px;
+}
+
+.card-title{
+font: normal normal normal 16px/24px;
+letter-spacing: 0px;
+color: #373A3C;
+opacity: 1;
+}
+
+.payment-card-section{
+	color: #FFFFFF;
+	font-size:2.5em;
+	background-color:#17A2B8;
+}
+
+
 footer{
-top: 2720px;
-left: 0px;
-width: 320px;
-height: 184px;
+	top: 1377px;
+	left: 0px;
+	width: 100wv;
+	height: 184px;
 background: #E83E8C 0% 0% no-repeat padding-box;
 opacity: 1;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 footer div{
@@ -68,3 +105,26 @@ footer div img{
 width: 36px;
 height: 67px;
 }
+
+.card{
+	margin: 5%;
+}
+
+
+.row{
+	
+	display: flex;
+	flex-direction: row;
+	justify-content:space-evenly;
+	
+	
+}
+
+
+
+@media screen and (max-width: 576px) {
+	.payment-card-section {
+	display: none;
+	}
+}
+
